implementei um alerta juridico programado por vencimento