@@ -3,13 +3,17 @@ package com.jaasielsilva.portalceo.controller;
 import com.jaasielsilva.portalceo.model.*;
 import com.jaasielsilva.portalceo.service.*;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.Arrays;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -31,7 +35,19 @@ public class ContratosController {
     private DepartamentoService departamentoService;
 
     private List<TipoContrato> tiposPermitidosPorDepartamento(Usuario usuario) {
-        if (usuario == null || usuario.getDepartamento() == null) {
+        if (usuario == null) {
+            return List.of();
+        }
+
+        // Se for MASTER ou ADMINISTRADOR, tem acesso a todos os tipos
+        boolean isMaster = usuario.getPerfis().stream()
+                .anyMatch(p -> p.getNome().equalsIgnoreCase("MASTER") || p.getNome().equalsIgnoreCase("ADMINISTRADOR"));
+        
+        if (isMaster) {
+            return Arrays.asList(TipoContrato.values());
+        }
+
+        if (usuario.getDepartamento() == null) {
             return List.of();
         }
 
@@ -42,79 +58,181 @@ public class ContratosController {
             case "TI" -> List.of(TipoContrato.PRESTADOR_SERVICO, TipoContrato.FORNECEDOR);
             case "COMPRAS" -> List.of(TipoContrato.FORNECEDOR);
             case "VENDAS" -> List.of(TipoContrato.CLIENTE);
-            case "ADMIN" -> List.of(TipoContrato.values());
+            case "ADMIN" -> Arrays.asList(TipoContrato.values());
             default -> List.of();
         };
     }
 
     @GetMapping
-    @PreAuthorize("hasAuthority('ADMIN')")
+    @PreAuthorize("hasAnyAuthority('ADMIN', 'MASTER', 'ROLE_MASTER')")
     public String listarTodos(Model model, @ModelAttribute("usuarioLogado") Usuario usuarioLogado) {
+        if (usuarioLogado == null) {
+            return "redirect:/login";
+        }
+
+        model.addAttribute("statusContrato", StatusContrato.values());
+        model.addAttribute("tiposContrato", TipoContrato.values());
+        model.addAttribute("metricas", montarMetricas());
+
+        return "contrato/listar";
+    }
+
+    private Map<String, Object> montarMetricas() {
+        Map<String, Object> metricas = new HashMap<>();
+        metricas.put("total", contratoService.contarTotal());
+        metricas.put("ativos", contratoService.contarPorStatus(StatusContrato.ATIVO));
+        metricas.put("vencendo", contratoService.contarVencendo30Dias());
+        metricas.put("valorAtivo", contratoService.somarValorAtivos());
+        return metricas;
+    }
+
+    @GetMapping("/api/listar")
+    @ResponseBody
+    public ResponseEntity<Map<String, Object>> listarContratosApi(
+            @RequestParam(value = "busca", required = false) String busca,
+            @RequestParam(value = "status", required = false) String status,
+            @RequestParam(value = "tipo", required = false) String tipo,
+            @RequestParam(value = "page", defaultValue = "0") int page,
+            @RequestParam(value = "size", defaultValue = "10") int size,
+            @ModelAttribute("usuarioLogado") Usuario usuarioLogado) {
+
+        if (usuarioLogado == null) {
+            return ResponseEntity.status(401).build();
+        }
+
+        List<TipoContrato> tiposPermitidos = tiposPermitidosPorDepartamento(usuarioLogado);
+
+        List<TipoContrato> tiposFiltro;
+        if (tipo != null && !tipo.isBlank()) {
+            TipoContrato t = TipoContrato.valueOf(tipo);
+            if (!tiposPermitidos.contains(t)) {
+                return ResponseEntity.status(403).build();
+            }
+            tiposFiltro = List.of(t);
+        } else {
+            tiposFiltro = tiposPermitidos;
+        }
+
+        StatusContrato statusFiltro = (status != null && !status.isBlank()) ? StatusContrato.valueOf(status) : null;
+
+        Page<Contrato> pageResult = contratoService.buscarTodos(busca, tiposFiltro, statusFiltro, page, size);
+
+        List<Map<String, Object>> content = pageResult.getContent().stream()
+                .map(c -> {
+                    Map<String, Object> item = new HashMap<>();
+                    item.put("id", c.getId());
+                    item.put("numeroContrato", c.getNumeroContrato());
+
+                    String nomeParte = "—";
+                    if (c.getCliente() != null)
+                        nomeParte = c.getCliente().getNomeFantasia() != null ? c.getCliente().getNomeFantasia()
+                                : c.getCliente().getNome();
+                    else if (c.getFornecedor() != null)
+                        nomeParte = c.getFornecedor().getRazaoSocial();
+                    else if (c.getPrestadorServico() != null)
+                        nomeParte = c.getPrestadorServico().getNome();
+                    else if (c.getColaborador() != null)
+                        nomeParte = c.getColaborador().getNome();
+
+                    item.put("parteNome", nomeParte);
+                    item.put("tipo", c.getTipo());
+                    item.put("dataInicio", c.getDataInicio());
+                    item.put("dataFim", c.getDataFim());
+                    item.put("status", c.getStatus());
+                    item.put("valor", c.getValor());
+                    return item;
+                })
+                .collect(Collectors.toList());
+
+        Map<String, Object> resp = new HashMap<>();
+        resp.put("content", content);
+        resp.put("currentPage", pageResult.getNumber());
+        resp.put("totalElements", pageResult.getTotalElements());
+        resp.put("totalPages", pageResult.getTotalPages());
+        resp.put("hasNext", pageResult.hasNext());
+        resp.put("hasPrevious", pageResult.hasPrevious());
+
+        return ResponseEntity.ok(resp);
+    }
+
+    @GetMapping("/api/{id}")
+    @ResponseBody
+    public ResponseEntity<Map<String, Object>> getContratoDetalhesApi(@PathVariable Long id) {
+        try {
+            Contrato contrato = contratoService.findById(id);
+            if (contrato == null)
+                return ResponseEntity.notFound().build();
+
+            Map<String, Object> detalhe = new HashMap<>();
+            detalhe.put("id", contrato.getId());
+            detalhe.put("numeroContrato", contrato.getNumeroContrato());
+            detalhe.put("status", contrato.getStatus() != null ? contrato.getStatus().name() : null);
+            detalhe.put("valor", contrato.getValor());
+            detalhe.put("dataInicio", contrato.getDataInicio());
+            detalhe.put("dataFim", contrato.getDataFim());
+            detalhe.put("tipo", contrato.getTipo() != null ? contrato.getTipo().name() : null);
+            detalhe.put("descricao", contrato.getDescricao());
+            detalhe.put("dataCriacao", contrato.getDataCriacao());
+            detalhe.put("ultimaAtualizacao", contrato.getUltimaAtualizacao());
+
+            String nomeParte = "—";
+            String docParte = "—";
+
+            if (contrato.getCliente() != null) {
+                nomeParte = contrato.getCliente().getNomeFantasia() != null ? contrato.getCliente().getNomeFantasia()
+                        : contrato.getCliente().getNome();
+                docParte = contrato.getCliente().getCpfCnpj();
+            } else if (contrato.getFornecedor() != null) {
+                nomeParte = contrato.getFornecedor().getRazaoSocial();
+                docParte = contrato.getFornecedor().getCnpj();
+            } else if (contrato.getPrestadorServico() != null) {
+                nomeParte = contrato.getPrestadorServico().getNome();
+                docParte = contrato.getPrestadorServico().getCnpjOuCpf();
+            } else if (contrato.getColaborador() != null) {
+                nomeParte = contrato.getColaborador().getNome();
+                docParte = contrato.getColaborador().getCpf();
+            }
+
+            detalhe.put("parteNome", nomeParte);
+            detalhe.put("parteDocumento", docParte);
+
+            return ResponseEntity.ok(detalhe);
+        } catch (IllegalArgumentException e) {
+            return ResponseEntity.notFound().build();
+        }
+    }
+
+    @GetMapping("/novo")
+    public String novoContrato(Model model, @ModelAttribute("usuarioLogado") Usuario usuarioLogado) {
+        Contrato contrato = new Contrato();
+        contrato.setNumeroContrato(contratoService.gerarProximoNumero()); // Gera número dinâmico
+        contrato.setDataInicio(java.time.LocalDate.now()); // Data início padrão hoje
+        contrato.setStatus(StatusContrato.ATIVO); // Status padrão
+        model.addAttribute("contrato", contrato);
+
         if (usuarioLogado == null) {
             return "redirect:/login";
         }
 
         List<TipoContrato> tiposPermitidos = tiposPermitidosPorDepartamento(usuarioLogado);
 
-        List<Contrato> contratos = contratoService.findAll().stream()
-                .filter(c -> tiposPermitidos.contains(c.getTipo()))
-                .collect(Collectors.toList());
-
-        model.addAttribute("contratos", contratos);
-        return "contrato/listar";
-    }
-
-    @GetMapping("/novo")
-    public String novoContrato(Model model, @ModelAttribute("usuarioLogado") Usuario usuarioLogado) {
-        Contrato contrato = new Contrato();
-        model.addAttribute("contrato", contrato);
-
-        // Obter departamento e perfil do usuário
-        String departamentoNome = usuarioLogado.getDepartamento() != null ? usuarioLogado.getDepartamento().getNome()
-                : "";
-        boolean isAdmin = usuarioLogado.getPerfis().stream()
-                .anyMatch(p -> p.getNome().equalsIgnoreCase("ADMIN"));
-
-        List<TipoContrato> tiposPermitidos;
-
-        if (isAdmin) {
-            switch (departamentoNome) {
-                case "RH":
-                    tiposPermitidos = List.of(TipoContrato.TRABALHISTA);
-                    break;
-                case "TI":
-                    tiposPermitidos = List.of(TipoContrato.PRESTADOR_SERVICO, TipoContrato.FORNECEDOR);
-                    break;
-                case "COMPRAS":
-                    tiposPermitidos = List.of(TipoContrato.FORNECEDOR);
-                    break;
-                case "VENDAS":
-                    tiposPermitidos = List.of(TipoContrato.CLIENTE);
-                    break;
-                case "ADMIN":
-                    tiposPermitidos = Arrays.asList(TipoContrato.values());
-                    break;
-                default:
-                    tiposPermitidos = List.of();
-                    break;
-            }
-        } else {
+        if (tiposPermitidos.isEmpty()) {
             return "redirect:/acesso-negado";
         }
 
         model.addAttribute("tiposContrato", tiposPermitidos);
         model.addAttribute("statusContrato", StatusContrato.values());
-        model.addAttribute("fornecedores", fornecedorService.listarAtivos());
-        model.addAttribute("clientes", clienteService.listarAtivosPorTipo("PJ"));
-        model.addAttribute("prestadoresServico", prestadorServicoService.findAllAtivos());
+        model.addAttribute("fornecedores", fornecedorService.listarAtivosParaSelecao());
+        model.addAttribute("clientes", clienteService.listarAtivosParaSelecaoPorTipo("PJ"));
+        model.addAttribute("prestadoresServico", prestadorServicoService.listarAtivosParaSelecao());
         model.addAttribute("departamentoUsuario", usuarioLogado.getDepartamento());
-        model.addAttribute("colaboradores", colaboradorService.listarAtivos());
+        model.addAttribute("colaboradores", colaboradorService.listarAtivosParaSelecao());
 
         return "contrato/contrato-form";
     }
 
     @PostMapping("/salvar")
-    @PreAuthorize("hasAuthority('ADMIN')")
+    @PreAuthorize("isAuthenticated()")
     public String salvarContrato(@ModelAttribute("contrato") Contrato contrato,
             @ModelAttribute("usuarioLogado") Usuario usuarioLogado) {
         if (usuarioLogado == null) {
@@ -165,15 +283,37 @@ public class ContratosController {
      * Carrega o contrato existente para edição
      */
     @GetMapping("/{id}/editar")
-    public String editar(@PathVariable Long id, Model model) {
+    public String editar(@PathVariable Long id, Model model, @ModelAttribute("usuarioLogado") Usuario usuarioLogado) {
         Contrato contrato = contratoService.findById(id);
-        model.addAttribute("contrato", contrato);
+        
+        if (usuarioLogado == null) {
+            return "redirect:/login";
+        }
 
-        model.addAttribute("tiposContrato", TipoContrato.values());
+        // Verifica permissão do departamento
+        List<TipoContrato> tiposPermitidos = tiposPermitidosPorDepartamento(usuarioLogado);
+        if (!tiposPermitidos.contains(contrato.getTipo()) && !tiposPermitidos.isEmpty()) {
+            // Se o usuário não tem permissão para este tipo, mas é o editor... 
+            // Aqui simplificamos: se não pode ver esse tipo, nega acesso.
+             return "redirect:/acesso-negado";
+        }
+        
+        // Se a lista de permitidos estiver vazia (sem departamento/perfil), redireciona
+        if (tiposPermitidos.isEmpty()) {
+            return "redirect:/acesso-negado";
+        }
+
+        model.addAttribute("contrato", contrato);
+        model.addAttribute("tiposContrato", tiposPermitidos);
         model.addAttribute("statusContrato", StatusContrato.values());
-        model.addAttribute("fornecedores", fornecedorService.listarAtivos());
-        model.addAttribute("clientes", clienteService.listarTodos());
-        model.addAttribute("prestadoresServico", prestadorServicoService.findAllAtivos());
+        
+        // Carrega as listas para os dropdowns (mesma lógica do novo)
+        model.addAttribute("fornecedores", fornecedorService.listarAtivosParaSelecao());
+        model.addAttribute("clientes", clienteService.listarAtivosParaSelecaoPorTipo("PJ"));
+        model.addAttribute("prestadoresServico", prestadorServicoService.listarAtivosParaSelecao());
+        model.addAttribute("colaboradores", colaboradorService.listarAtivosParaSelecao());
+        
+        model.addAttribute("departamentoUsuario", usuarioLogado.getDepartamento());
 
         return "contrato/contrato-form";
     }
